--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://haithamassoli.github.io/Pagination-React",
   "name": "reminder",
   "version": "0.1.0",
   "private": true,
